syntax = "proto3";



message FileName {
    string name = 1;
}

message FilesList {
    repeated FileName names = 1;
}

message FileData {
    bytes content = 1;
    string extension = 2;
}
